# sparta

./: .travis.yml  Build.hs  LICENSE  Match.hs  README.md  Token.hs  sparta.cabal  stack.yaml
src/cli/: Main.hs  Options.hs
src/lib/: Sparta.hs
src/lib/Sparta/: Build.hs  Search.hs  Token.hs  Types.hs
src/lib/Text/: Sparta.hs
src/lib/Text/Sparta/: Build.hs  Match.hs  Search.hs  Token.hs  Types.hs
