name:                sparta
version:             0.1.0.0
synopsis:            Sparse Table
description:         Sparse Table Library & Tooling
homepage:            https://github.com/lovasko/sparta
license:             BSD3
license-file:        LICENSE
author:              Daniel Lovasko <daniel.lovasko@gmail.com>
maintainer:          Daniel Lovasko <daniel.lovasko@gmail.com>
copyright:           2016 Daniel Lovasko
category:            Text, Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Sparta
  other-modules:       Sparta.Build
                     , Sparta.Token
                     , Sparta.Types
                     , Sparta.Search
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , safe
                     , split
                     , text
  default-language:    Haskell2010

executable sparta-cli
  hs-source-dirs:      src/cli
  main-is:             Main.hs
  build-depends:       base
                     , sparta
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lovasko/sparta
